# bloomberg-stock-trend-prediction

./: .gitattributes  .gitignore  ACADEMIC_REPORT.md  CHANGELOG.md  EXECUTIVE_SUMMARY.md  PIPELINE_OPTIMIZATION_SUMMARY.md  README.md  continue_training.py  evaluate_continued_model.py  generate_feature_analysis.py  generate_training_plots.py  load_pretrained_model.py  predict_dashboard.py  pyproject.toml  regenerate_dataset_focused.py  requirements.txt
pretrained_models/: QUICKSTART.md  README.md  SUMMARY.md  best_model_v2.0.ckpt  best_model_v2.1.ckpt  model_metadata.json  model_metadata_v2.1.json
src/: constants.py  main.py
src/model/: __init__.py  callbacks.py  config.py  data_module.py  dataset.py  model.py  predict.py  quick_predict.py  train.py  utils.py
src/model/best/: val_acc=0.6604_val_loss=0.6620_train_acc=0.6566_epoch=12.ckpt
src/preprocessing/: csv_feature_freq_analyzer.py  dataset_analyzer.py  find_balanced_bins.py  parse_excel_dataset.py  pipeline.py  stock_dataset_builder.py
