[project]
name = "bloomberg-stock-trend-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.3",
    "numpy>=2.3.5",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
