[project]
name = "bloomberg-stock-trend-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.3",
    "numpy>=2.3.5",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "lightning>=2.6.0",
    "torchmetrics>=1.8.2",
    "tensorboard>=2.20.0",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "imbalanced-learn>=0.14.0",
    "streamlit>=1.52.0",
    "plotly>=6.5.0",
]
